--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 
+<a href="/">INICIO</a>
+<a href="/recipes">RECETAS</a>
+<a href="/recipes/categories">CATEGORIAS</a>
+<a href="/user">PERFIL</a>
+
 </body>
 </html>
