--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Receta</title>
 </head>
 <body>
-
+<h1 th:text="${recipe.name}"></h1>
+<h3 th:text="${recipe.category}"></h3>
+<h4>Tiempo</h4>
+<p th:text="recipe.time"></p>
+<h4>Alergenos</h4>
+<h4>Nombre Nutricionista</h4>
+<p th:text="recipe.user.name"></p>
+<h4>(ICONO CORAZON) Añadir a favoritos</h4>
+<h2>Ingredientes</h2>
+<ul>
+    <li th:each="ingredient : ${recipe.ingredientList}" th:text="ingredient"></li>
+</ul>
+<h2>Utensilios</h2>
+<ul>
+    <li th:each="tool : ${recipe.toolList}" th:text="tool"></li>
+</ul>
+<h2>Preparacion</h2>
+<p th:text="recipe.description"></p>
 </body>
 </html>
