--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Recetas</title>
 </head>
 <body>
-
+<ul>
+    <a th:each="recipe : ${recipeList}" th:href="@{${'/recipes/' + recipe.id}}">
+        <li th:text="|${recipe.name} (${recipe.category}|">Texto por defecto</li>
+    </a>
+</ul>
 </body>
 </html>
