--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -98,6 +98,33 @@ header {
     border-style: double;
 }
 
+main {
+    background-color: #D0EEF4;
+    font-family: var(--font_logo);
+    color: #006272;
+    font-size: 32px;
+    text-align: center;
+}
+
+main p.welcome {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+main img {
+    max-height: 60px;
+}
+
+main i {
+    color: #F1856A;
+}
+
+main p.message {
+    color: black;
+    font-style: italic;
+}
+
 footer {
     font-family: var(--font_footer);
     background-color: #F1856A;
