--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,23 @@
             <button>SIGN UP</button>
         </div>
     </header>
-    <br><br><br>
+    <main>
+        <section class="welcome">
+            <article class="welcome">
+                <br>
+                <p class="welcome">
+                    Bienvenido a <img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
+                </p>
+                <br>
+                <i class="fa-solid fa-heart"></i>
+                <br>
+                <br>
+                <p class="message">
+                    "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
+                </p>
+            </article>
+        </section>
+    </main>
     <footer>
         <br>
         <i class="fa-brands fa-facebook"></i>
