Debug controller and css

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../static/css/home.css">
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
@@ -13,11 +13,11 @@
     <header>
         <div class="logo">
             <div class="nf-logo">
-                <img src="./images/logo_NFF.png" alt="NF-Logo" class="nf-logo">
+                <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">
             </div>
             <div class="logo&text">
                 <div class="nutrifusion-food">
-                    <img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
+                    <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
                 </div>
                 <div class="logo-text">
                     <p>Fusionando Sabor y Nutrición</p>
