--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="../static/css/profile.css">
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Profile</title>
 </head>
@@ -11,11 +11,11 @@
     <header>
         <div class="logo">
             <div class="nf-logo">
-                <img src="./images/logo_NFF.png" alt="NF-Logo" class="nf-logo">
+                <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">
             </div>
             <div class="logo&text">
                 <div class="nutrifusion-food">
-                    <img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
+                    <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
                 </div>
                 <div class="logo-text">
                     <p>Fusionando Sabor y Nutrición</p>
