--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,23 +36,34 @@
             <button>SIGN UP</button>
         </div>
     </header>
+    <hr class="header">
     <main>
         <section class="welcome">
-            <article class="welcome">
-                <br>
-                <p class="welcome">
-                    Bienvenido a <img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
-                </p>
-                <br>
-                <i class="fa-solid fa-heart"></i>
-                <br>
-                <br>
-                <p class="message">
-                    "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
-                </p>
-            </article>
+            <br>
+            <p class="welcome">
+                Bienvenido a<img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
+            </p>
+            <br>
+            <i class="fa-solid fa-heart"></i>
+            <br>
+            <br>
+            <p class="message">
+                "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
+            </p>
+            <br>
+        </section>
+        <hr class="main">
+        <section class="categories">
+            <p class="categories">CATEGORIAS</p>
+            <br>
+            <img src="images/recetas.png" alt="recipes">
+            <img src="images/bebidas.png" alt="drinks">
+            <img src="images/salados.png" alt="salados">
+            <img src="images/postres.png" alt="desserts">
+            <img src="images/snacks.png" alt="snacks">
         </section>
     </main>
+    <hr class="footer">
     <footer>
         <br>
         <i class="fa-brands fa-facebook"></i>
@@ -60,6 +71,7 @@
         <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-instagram"></i>
         <p class="footer">©2024 by NutriFusion Food</p>
+        <br>
     </footer>
 </body>
 
