About Us Home Page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,11 +41,9 @@
         <section class="welcome">
             <br>
             <p class="welcome">
-                Bienvenido a<img src="./images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
+                Bienvenido a<img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food">
             </p>
-            <br>
             <i class="fa-solid fa-heart"></i>
-            <br>
             <br>
             <p class="message">
                 "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
@@ -55,12 +53,51 @@
         <hr class="main">
         <section class="categories">
             <p class="categories">CATEGORIAS</p>
+            <article class="images">
+                <div class="recipes">
+                    <img src="../static/images/recetas.png" alt="recipes">
+                    <p>Recetas</p>
+                </div>
+                <div class="drinks">
+                    <img src="../static/images/bebidas.png" alt="drinks">
+                    <p>Bebidas</p>
+                </div>
+                <div class="salty">
+                    <img src="../static/images/salados.png" alt="salty">
+                    <p>Salados</p>
+                </div>
+                <div class="desserts">
+                    <img src="../static/images/postres.png" alt="desserts">
+                    <p>Postres</p>
+                </div>
+                <div class="snacks">
+                    <img src="../static/images/snacks.png" alt="snacks">
+                    <p>Snacks</p>
+                </div>
+            </article>
             <br>
-            <img src="images/recetas.png" alt="recipes">
-            <img src="images/bebidas.png" alt="drinks">
-            <img src="images/salados.png" alt="salados">
-            <img src="images/postres.png" alt="desserts">
-            <img src="images/snacks.png" alt="snacks">
+        </section>
+        <hr class="main">
+        <section class="about-us">
+            <br><br>
+            <i class="fa-solid fa-mitten"></i>
+            <p>ACERCA DE NOSOTROS</p>
+            <br>
+            <div class="about-us">
+                <div class="about-us-image">
+                    <img src="../static/images/about-us.png" alt="about-us">
+                </div>
+                <div class="text">
+                    <br>
+                    <p class="title">NutriFusion Food</p> <br>
+                    <p class="description">We want to propose a site for the cooking fans to find healthy and tasty
+                        recipes created
+                        by nutritionists. <br>
+                        Our name came from our interest of the fusion between food and nutrition. <br>
+                        We want to create a site more minimalist with all the main information but that maintains an
+                        attractive style.</p>
+                </div>
+            </div>
         </section>
     </main>
     <hr class="footer">
