--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Forum&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
     --font_logo: Forum;
     --font_navbar: Playfair Display;
-    --font_footer: Montserrat;
+    --font_footer: Courier Prime;
 }
 
 * {
@@ -79,6 +79,7 @@ header {
 }
 
 .signup-button button {
+    font-size: 16px;
     padding: 10px;
     background-color: #006272;
     border: white;
@@ -115,8 +116,8 @@ main {
     background-color: #D0EEF4;
     font-family: var(--font_logo);
     color: #006272;
-    font-size: 32px;
     text-align: center;
+    font-size: 36px;
 }
 
 main p.welcome {
@@ -124,11 +125,11 @@ main p.welcome {
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 48px;
+    font-size: 42px;
 }
 
 main p img {
-    max-height: 80px;
+    max-height: 60px;
     margin-left: 15px;
 }
 
@@ -139,19 +140,87 @@ main i {
 main p.message {
     color: black;
     font-style: italic;
-    margin-left: 32.5%;
-    max-width: 35%;
+    margin-left: 30%;
+    max-width: 40%;
+    font-size: 34px;
 }
 
 main p.categories {
-    font-size: 52px;
+    font-size: 56px;
     font-style: italic;
 }
 
-main section.categories img {
-    border-radius: 5%;
-    margin-right: 50px;
-    max-height: 200px;
+main article.images {
+    display: flex;
+    justify-content: center;
+}
+
+main article.images img {
+    border-radius: 10px;
+}
+
+main article.images div {
+    text-align: left;
+    margin: 0 25px;
+}
+
+main article.images p {
+    text-indent: 20px;
+    color: black;
+    font-style: italic;
+    font-family: var(--font_navbar);
+    font-size: 25px;
+    letter-spacing: 2px;
+    background-color: #F1856A;
+    position: relative;
+}
+
+main article.images p::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0px;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid #D0EEF4;
+}
+
+main section.about-us i {
+    transform: rotate(45deg);
+}
+
+main section.about-us p {
+    font-style: italic;
+    font-size: 42px;
+}
+
+main div.about-us {
+    display: flex;
+}
+
+main div.about-us-image {
+    flex: 0 0 60%;
+}
+
+main div.about-us div.text {
+    flex: 0 0 40%;
+}
+
+main div.about-us p.title {
+    color: black;
+    font-size: 30px;
+    margin-left: 40px;
+    text-align: left;
+}
+
+main div.about-us p.description {
+    font-family: var(--font_footer);
+    font-size: 14px;
+    font-style: normal;
+    margin-left: 40px;
+    text-align: left;
+    max-width: 75%;
+    line-height: 2;
 }
 
 hr.footer {
