--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,10 +26,10 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a th:href="home" class="Home">INICIO</a></li>
-                <li><a th:href="category" class="Category">CATEGORIAS</a></li>
-                <li><a th:href="recipes" class="Recipe">RECETAS</a></li>
-                <li><a th:href="profile" class="Profile">PERFIL</a></li>
+                <li><a href="/home" class="Home">INICIO</a></li>
+                <li><a href="/recipes/categories" class="Category">CATEGORIAS</a></li>
+                <li><a href="/recipes" class="Recipe">RECETAS</a></li>
+                <li><a href="/profile" class="Profile">PERFIL</a></li>
             </ul>
         </nav>
         <div class="signup-button">
@@ -76,7 +76,7 @@
                 </div>
             </article>
             <br>
-<<<<<<< HEAD
+
         </section>
         <hr class="main">
         <section class="about-us">
@@ -99,13 +99,7 @@
                         attractive style.</p>
                 </div>
             </div>
-=======
-            <img th:src="@{/images/recetas.png}" alt="recipes">
-            <img th:src="@{/images/bebidas.png}" alt="drinks">
-            <img th:src="@{images/salados.png}" alt="salados">
-            <img th:src="@{images/postres.png}" alt="desserts">
-            <img th:src="@{images/snacks.png}" alt="snacks">
->>>>>>> 6d87f87 (Change links in recipeDetail)
+
         </section>
     </main>
     <hr class="footer">
