--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,94 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/custom.css}"> <!--link para verlo con chrome enlace css-->
+    <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <div class="nf-logo">
-                <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo">
+<header th:insert="fragments.html :: header">Header</header>
+<main>
+    <div class="container-fluid bg-secundary">
+        <section class="section-welcome py-5 border-bottom border-primary text-center">
+            <h2 class="welcome-text fs-1 text-info">
+                Bienvenido a<!--
+                    <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">-->
+                    <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food-welcome">
+            </h2>
+            <div class="icon pb-3 fs-3">
+                <i class="fa-solid fa-heart"></i>
             </div>
-            <div class="logo&text">
-                <div class="nutrifusion-food">
-                    <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
-                </div>
-                <div class="logo-text">
-                    <p>Fusionando Sabor y Nutrición</p>
-                </div>
-            </div>
-        </div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="/home" class="Home">INICIO</a></li>
-                <li><a href="/recipes/categories" class="Category">CATEGORIAS</a></li>
-                <li><a href="/recipes" class="Recipe">RECETAS</a></li>
-                <li><a href="/profile" class="Profile">PERFIL</a></li>
-            </ul>
-        </nav>
-        <div class="signup-button">
-            <button>SIGN UP</button>
-        </div>
-    </header>
-    <hr class="header">
-    <main>
-        <section class="welcome">
-            <br>
-            <p class="welcome">
-                Bienvenido a<img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
-            </p>
-            <i class="fa-solid fa-heart"></i>
-            <br>
-            <p class="message">
+    
+            <p class="message fs-3 pt-2">
                 "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
             </p>
-            <br>
         </section>
-        <hr class="main">
-        <section class="categories">
-            <p class="categories">CATEGORIAS</p>
-            <article class="images">
-                <div class="recipes">
-                    <img th:src="@{/images/recetas.png}" alt="recipes">
-                    <p>Recetas</p>
+    
+        <section class="section-categories border-bottom border-primary text-center py-4">
+            <h2 class="categories-text text-info fs-2 fst-italic fw-bold ">CATEGORIAS</h2>
+            <article class="images px-5 py-3">
+                <div class="recipes d-inline-block  px-4 ">
+                   <!--<img th:src="@{/images/recetas.png}" alt="recipes">--> 
+                    <img src="../static/images/recetas.png" alt="recipes" class="img-recipes d-block pb-3">
+                    <p class="title-recipe fs-3 bg-warning d-inline-block ">Recetas</p>
                 </div>
-                <div class="drinks">
-                    <img th:src="@{/images/bebidas.png}" alt="drinks">
-                    <p>Bebidas</p>
+                <div class="drinks d-inline-block px-4">
+                   <!--<img th:src="@{/images/bebidas.png}" alt="drinks" class="img-drinks d-block">--> 
+                    <img src="../static/images/bebidas.png" alt="drinks" class="img-drinks d-block pb-3">
+                    <p class="title-drink fs-3 bg-warning d-inline-block ">Bebidas</p>
                 </div>
-                <div class="salty">
-                    <img th:src="@{/images/salados.png}" alt="salty">
-                    <p>Salados</p>
+                <div class="main-dish d-inline-block  px-4">
+                    <!--<img th:src="@{/images/salados.png}" alt="main-dish">--> 
+                    <img src="../static/images/salados.png" alt="main-dish" class="img-maindish d-block pb-3 ">
+                    <p class="title-maindish fs-3 bg-warning d-inline-block ">Salados</p>
                 </div>
-                <div class="desserts">
-                    <img th:src="@{/images/postres.png}" alt="desserts">
-                    <p>Postres</p>
+                <div class="desserts d-inline-block px-4">
+                     <!--<img th:src="@{/images/postres.png}" alt="desserts">-->
+                     <img src="../static/images/postres.png" alt="desserts" class="img-desserts d-block pb-3">
+                    <p class="title-desserts fs-3 bg-warning d-inline-block ">Postres</p>
                 </div>
-                <div class="snacks">
-                    <img th:src="@{/images/snacks.png}" alt="snacks">
-                    <p>Snacks</p>
+                <div class="snacks d-inline-block  px-4">
+                     <!--<img th:src="@{/images/snacks.png}" alt="snacks">-->
+                     <img src="../static/images/snacks.png" alt="snacks" class="img-snacks d-block pb-3">
+                    <p class="title-snacks fs-3 bg-warning d-inline-block ">Snacks</p>
                 </div>
             </article>
             <br>
 
         </section>
-        <hr class="main">
-        <section class="about-us">
-            <br><br>
-            <i class="fa-solid fa-mitten"></i>
-            <p>ACERCA DE NOSOTROS</p>
-            <br>
-            <div class="about-us">
-                <div class="about-us-image">
-                    <img th:src="@{/images/about-us.png}" alt="about-us">
+        <section class="about-us text-center px-2 py-4">
+            <i class="fa-solid fa-mitten fs-3 py-3"></i>
+            <p class="aboutus-text text-info fs-2">ACERCA DE NOSOTROS</p>
+        
+            <div class="about-us ">
+                <div class="about-us-image d-inline-block">
+                     <!-- <img th:src="@{/images/about-us.png}" alt="about-us">-->
+                    <img src="../static/images/about-us.png" alt="about-us" class="img-aboutus">
                 </div>
-                <div class="text">
-                    <br>
-                    <p class="title">NutriFusion Food</p> <br>
-                    <p class="description">We want to propose a site for the cooking fans to find healthy and tasty
+                <div class="text d-inline-block mx-5">
+                    <p class="NFF-title fs-3 ">NutriFusion Food</p> <br>
+                    <p class="description-aboutus fs-4 ">We want to propose a site for the cooking fans to find healthy and tasty
                         recipes created
                         by nutritionists. <br>
                         Our name came from our interest of the fusion between food and nutrition. <br>
@@ -101,17 +82,9 @@
             </div>
 
         </section>
-    </main>
-    <hr class="footer">
-    <footer>
-        <br>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <p class="footer">©2024 by NutriFusion Food</p>
-        <br>
-    </footer>
+    </div>
+</main>
+<footer th:insert="fragments.html::footer"></footer>
 </body>
 
 </html>
